# CumulativeCostBoosting

./: AdaAC.py  AdaCC.py  Amort_vs_non_amort.py  AnalyseAveragedLogs.py  AnalyseLogs.py  CDF_plots_CostBoosting.py  CDF_plots_CostBoosting_onlyPositive.py  Evaluation.py  ExportTableLogs.py  FeatureImportance.py  Fried_test.py  LICENSE  PerRoundAnalysisBaselines.py  PlotBounary.py  README.md  RankingBasedOnLogs.py  SignifTest.py  Toy_visualization.ipynb  mysh.sh  plot_functions.py  pyproject.toml  requirements.txt  run_example.py
Competitors/: AdaC1C3.py  AdaMEC.py  AdaMEC_Cal.py  AdaMECal.py  CGAda.py  CGAda_Cal.py  CostBoostingAlgorithms.py  RareBoost.py
DataPreprocessing/: Skin_NonSkin.csv  diabetic_data.rar  eeg_eye_state.csv  electricity.csv  load_adult.py  load_bank.py  load_credit.py  load_diabetes.py  load_eeg_eye.py  load_electricity.py  load_kdd.py  load_mat_data.py  load_mushroom.py  load_phoneme.py  load_skin.py  load_spam.py  load_speed_dating.py  load_wilt.py  mushroom.csv  spam.csv  wilt.csv
cumulative_cost_boosting/: AdaCC.py  __init__.py
